# GUITravelScraper

./: .clang-format  .gitignore  CMakeLists.txt  Makefile
src/: app_activate.c  app_activate.h  main.c  utils.c  utils.h
src/navbar/: navbar.c  navbar.h
src/rust_interface/: rust_interface.c  rust_interface.h
src/types/: string_list.c  string_list.h
